# simple-tsp

./: .gitignore  README.md  pyproject.toml
src/simple_tsp/: __init__.py
src/tests/: test_tsp.py
