[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pyvrp>=0.12.1",
]
description = "Solving the Traveling Salesman Problem"
name = "simple-tsp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.0"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/simple-tsp"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.taskipy.tasks]
lint = "pyrefly check src; ruff check"
test = "uv run pytest src"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = [
  "COM812",
  "CPY",
  "D203",
  "D213",
  "D400",
  "D415",
  "DOC201",
  "E501",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.5,<0.10.0"]
